# docs/swagger.json
@@ -31,12 +31,71 @@
                 "responses": {}
             }
         },
+        "/cart/{id}": {
+            "get": {
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "Get cart by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            },
+            "put": {
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "Update cart",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Cart data",
+                        "name": "cart",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Cart"
+                        }
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "Delete cart",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/cartitem/": {
             "get": {
                 "tags": [
                     "Cart Item"
                 ],
-                "summary": "Create cart item",
+                "summary": "Get all cart item",
                 "responses": {}
             },
             "post": {
@@ -53,6 +112,65 @@
                         "schema": {
                             "$ref": "#/definitions/models.CartItem"
                         }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/cartitem/{id}": {
+            "get": {
+                "tags": [
+                    "Cart Item"
+                ],
+                "summary": "Get cart item id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            },
+            "put": {
+                "tags": [
+                    "Cart Item"
+                ],
+                "summary": "Update cart item",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "CartItem data",
+                        "name": "cartitem",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CartItem"
+                        }
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "tags": [
+                    "Cart Item"
+                ],
+                "summary": "Delete cart item",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -139,6 +257,33 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/orderstatus/": {
+            "get": {
+                "tags": [
+                    "Shipping Method"
+                ],
+                "summary": "Get ALL ShippingMethod",
+                "responses": {}
+            },
+            "post": {
+                "tags": [
+                    "Order Status"
+                ],
+                "summary": "Create OrderStatus",
+                "parameters": [
+                    {
+                        "description": "OrderStatus data",
+                        "name": "orderstatus",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.OrderStatus"
+                        }
                     }
                 ],
                 "responses": {}
@@ -316,6 +461,33 @@
                 "responses": {}
             }
         },
+        "/shippingmethod/": {
+            "get": {
+                "tags": [
+                    "Shipping Method"
+                ],
+                "summary": "Get ALL ShippingMethod",
+                "responses": {}
+            },
+            "post": {
+                "tags": [
+                    "Shipping Method"
+                ],
+                "summary": "Create shippingmethod",
+                "parameters": [
+                    {
+                        "description": "ShippingMethod data",
+                        "name": "shippingmethod",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ShippingMethod"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/user/": {
             "get": {
                 "tags": [
@@ -349,6 +521,92 @@
                     "User"
                 ],
                 "summary": "Get users by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/voucher/": {
+            "get": {
+                "tags": [
+                    "Voucher"
+                ],
+                "summary": "Get ALL voucher",
+                "responses": {}
+            },
+            "post": {
+                "tags": [
+                    "Voucher"
+                ],
+                "summary": "Create voucher",
+                "parameters": [
+                    {
+                        "description": "Voucher data",
+                        "name": "voucher",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Voucher"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/voucher/{id}": {
+            "get": {
+                "tags": [
+                    "Voucher"
+                ],
+                "summary": "Get voucher by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            },
+            "put": {
+                "tags": [
+                    "Voucher"
+                ],
+                "summary": "Update voucher",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Voucher data",
+                        "name": "voucher",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Voucher"
+                        }
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "tags": [
+                    "Voucher"
+                ],
+                "summary": "Delete voucher",
                 "parameters": [
                     {
                         "type": "integer",
@@ -621,6 +879,9 @@
             "type": "object",
             "properties": {
                 "created_at": {
+                    "type": "string"
+                },
+                "description": {
                     "type": "string"
                 },
                 "id": {
